# psite_annotation

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: coverage.yml  publish_release.yml
docs/: conf.py  index.rst  requirements.txt
docs/source/: api.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
docs/source/_templates/: custom-module-template.rst
psite_annotation/: __init__.py  config.py  functional_annotation.py
psite_annotation/annotators/: __init__.py  annotator_base.py  clinical_basket.py  domain.py  in_vitro_kinases.py  kinase_library.py  modified_sequence_aggregation.py  modified_sequence_group.py  motif.py  peptide_position.py  psp_kinases.py  psp_regulatory.py  psp_studies.py  ptm_turnover.py  separated_strings.py  site_sequence_context.py
tests/data/: curves.txt  uniprot_proteins.fasta  uniprot_proteins.txt  yasushi_subset.tsv
tests/system_tests/: test_annotate_yasushi.py  test_functional_annotation.py
tests/unit_tests/: test_functional_annotation.py
tests/unit_tests/annotators/: conftest.py  test_clinical_basket.py  test_domain.py  test_in_vitro_kinases.py  test_kinase_library.py  test_modified_sequence_aggregation.py  test_modified_sequence_group.py  test_motif.py  test_peptide_position.py  test_psp_kinases.py  test_psp_regulatory.py  test_psp_studies.py  test_ptm_turnover.py  test_site_sequence_context.py
