[tool.poetry]
name = "psite-annotation"
version = "0.3.0"
description = "Module for annotating p-sites based on resources such as PhosphoSitePlus"
authors = ["Matthew The <matthew.the@tum.de>"]
license= "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
numpy = "^1.18.1"
pandas = "^1.3.0"
config-path = "1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
flake8 = "^6.0.0"
black = "^22.12.0"
pre-commit = "^3.0.1"
pre-commit-hooks = "^4.4.0"
pyupgrade = "^3.3.1"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.1.20"
flake8-bandit = "^4.1.1"
darglint = "^1.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
